--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -608,7 +608,7 @@ main {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  max-width: 75.4rem;
+  width: 75.4rem;
 }
 
 .top__right-blockimg {
@@ -745,12 +745,12 @@ main {
   }
   .top__left-title {
     font-size: 2.8rem;
-    margin-bottom: 4rem;
+    margin-bottom: 2rem;
   }
   .top__left-subtitle {
     max-width: 34.3rem;
     font-size: 1.3rem;
-    margin-bottom: 5.3rem;
+    margin-bottom: 3.3rem;
   }
   .top__left-img {
     max-width: 40.3rem;
@@ -767,119 +767,140 @@ main {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    max-width: 75.4rem;
+    width: 45.4rem;
   }
-  .top__right-blockimg {
-    position: relative;
+  .right-img {
+    width: 45.4rem;
   }
   .top__right-lang {
-    position: absolute;
-    top: 0;
-    right: 0;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    row-gap: 2rem;
+    row-gap: 1.7rem;
   }
   .right__lang-item {
-    cursor: pointer;
-    font-weight: 600;
     font-size: 1.3rem;
-    line-height: 122%;
-    color: #919191;
   }
   .right__lang-line {
-    width: 0.1rem;
-    height: 3rem;
-    background-color: #919191;
+    height: 2.5rem;
   }
   .top__right-row {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    margin-top: 3rem;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    -webkit-box-align: end;
-        -ms-flex-align: end;
-            align-items: flex-end;
-    padding-left: 8rem;
+    margin-top: 2rem;
+    padding-left: 0rem;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    row-gap: 2rem;
   }
   .right__row-button {
-    cursor: pointer;
-    font-weight: 400;
     font-size: 1.3rem;
-    line-height: 150%;
-    letter-spacing: 0.04em;
-    text-transform: uppercase;
-    padding: 1.3rem 2.35rem;
-    background-color: #F69333;
-    border-radius: 0.3rem;
-    -webkit-transition: all 0.3s ease 0s;
-    transition: all 0.3s ease 0s;
-  }
-  .right__row-button:hover {
-    background-color: #c97a2b;
-    -webkit-box-shadow: 0 0 0.7rem #F69333;
-            box-shadow: 0 0 0.7rem #F69333;
+    padding: 1.3rem 2rem;
   }
   .right__row-character {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    width: 37.7rem;
+    width: 100%;
   }
   .row__character-item {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
     row-gap: 0.8rem;
   }
   .tree__img {
     width: 3rem;
     height: 3rem;
   }
-  .tree__img img {
-    width: 100%;
-  }
   .row__character-text {
-    font-weight: 300;
-    font-size: 1.3rem;
-    line-height: 150%;
+    font-size: 1.2rem;
   }
   .house__img {
     width: 3rem;
     height: 3rem;
   }
-  .house__img img {
-    width: 100%;
-  }
   .pool__img {
     width: 3rem;
     height: 3rem;
   }
-  .pool__img img {
+}
+@media (max-width: 768px) {
+  main {
+    padding-top: 7.3rem;
+  }
+  .section__top-container {
+    padding: 3.2rem 1.5rem 3.6rem 1.5rem;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .top__left-title {
+    font-size: 2.4rem;
+    margin-bottom: 1rem;
+  }
+  .top__left-subtitle {
+    max-width: 100%;
+    font-size: 1.3rem;
+    margin-bottom: 3.3rem;
+  }
+  .top__left-img {
+    display: none;
+  }
+  .left-img {
+    display: none;
+  }
+  .section__top-right {
+    width: 45.4rem;
+  }
+  .right-img {
+    width: 45.4rem;
+  }
+  .top__right-lang {
+    row-gap: 1.4rem;
+  }
+  .right__lang-item {
+    font-size: 1.3rem;
+  }
+  .right__lang-line {
+    height: 2rem;
+  }
+  .top__right-row {
+    margin-top: 2rem;
+    row-gap: 2rem;
+  }
+  .right__row-button {
+    font-size: 1.3rem;
+    padding: 1.3rem 2rem;
+  }
+}
+@media (max-width: 576px) {
+  main {
+    padding-top: 4.2rem;
+  }
+  .top__left-title {
+    font-size: 2rem;
+  }
+  .top__left-subtitle {
+    font-size: 1.2rem;
+    margin-bottom: 2.3rem;
+  }
+  .section__top-right {
     width: 100%;
+  }
+  .right-img {
+    width: 100%;
+  }
+  .top__right-lang {
+    row-gap: 1.4rem;
+  }
+  .right__lang-item {
+    font-size: 1.1rem;
+  }
+  .right__lang-line {
+    height: 2rem;
+  }
+  .top__right-row {
+    margin-top: 2rem;
+    row-gap: 2rem;
+  }
+  .right__row-button {
+    font-size: 1.3rem;
+    padding: 1.3rem 2rem;
   }
 }
