--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1426,6 +1426,7 @@ main {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  max-height: 81rem;
 }
 
 .section__relax-slide-mobile {
@@ -1438,6 +1439,7 @@ main {
 }
 .relax__slide-img img {
   width: 100%;
+  max-height: 81rem;
 }
 
 .relax__slide-row {
@@ -1515,6 +1517,28 @@ main {
   width: 100%;
 }
 
+.section__relax-button {
+  font-weight: 400;
+  font-size: 1.3rem;
+  line-height: 150%;
+  bottom: -17rem;
+  left: 1.5rem;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: #222222;
+  position: absolute;
+  padding: 1.3rem 2.35rem;
+  border-radius: 0.4rem;
+  background-color: #FFFFFF;
+  border: 0.1rem solid #F69333;
+  -webkit-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+}
+.section__relax-button:hover {
+  background-color: #F69333;
+  color: #fff;
+}
+
 @media (max-width: 992px) {
   .section__relax-container {
     padding: 9rem 1.5rem 5.4rem 1.5rem;
@@ -1534,6 +1558,12 @@ main {
     position: absolute;
     max-width: 51.4rem;
     top: 9rem;
+  }
+  .section__relax-button {
+    font-size: 1.3rem;
+    bottom: -7.4rem;
+    left: 1.5rem;
+    padding: 1.3rem 2.35rem;
   }
 }
 @media (max-width: 768px) {
@@ -1636,5 +1666,11 @@ main {
   .slide__row-nav-right {
     width: 5.8rem;
     height: 1.25rem;
+  }
+  .section__relax-button {
+    font-size: 1.1rem;
+    bottom: -6.4rem;
+    left: 1.5rem;
+    padding: 0.9rem 2rem;
   }
 }
